--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,13 @@ npm-debug.log
 .direnv
 .nix-shell
 result
+_build/
+deps/
+.elixir_ls/
+.elixir-tools/
+erl_crash.dump
+*.ez
+.env*
+/cover/
+/doc/
+/.fetch
